プライバシーポリシー変更

--- a/scss/foundation/_variables.scss
+++ b/scss/foundation/_variables.scss
@@ -24,9 +24,12 @@ $color-featureGreen: #54757c;
 $color-bgLightGreen: #EBF2F1;
 
 // 青系統
+$color-accent: #008bd5;
 $main-color-Blue: #008bd5;
 $main-color-DeepBlue: #00478b;
 $main-color-GrayBlue: #81aac2;
+$color-darkBlueAccent: #00478b;
+$color-darkAccent: #00478b;
 
 // 赤系統
 $main-color-Red: #eb1c24;
@@ -37,11 +40,6 @@ $main-color-DarkBrown: #bf272d;
 
 // 橙系統
 $main-color-Orange: #f7a42a;
-
-// 青系統
-$color-darkBlueAccent: #1e5674;
-$color-darkAccent: #335B63;
-$color-accent: #005E66;
 
 
 
