--- a/scss/component/_button.scss
+++ b/scss/component/_button.scss
@@ -10,7 +10,6 @@
 	width: 300px;
 	border-radius: 50px;
 	text-decoration: none;
-	font-family: v.$heading-font-family;
 	font-size: 2.1rem;
 	text-align: center;
 	padding: 0 40px;
@@ -92,6 +91,29 @@
 		}
 		@media screen and (min-width: 1024px) {
 			margin: 30px 0 0 auto;
+		}
+	}
+	&.c-icon-downarrow{
+		&::after {
+			content: '';
+			position: absolute;
+			right: 20px;
+			top: 5px;
+			bottom: 0;
+			margin: auto;
+			width: 10px;
+			height: 10px;
+			border-top: 1px solid v.$color-accent;
+			border-right: 1px solid v.$color-accent;
+			transform: translateY(-50%) rotate(135deg);
+			transition: opacity,top 0.5s ease;
+		}
+		&:hover {
+			opacity: 0.8;
+			&::after {
+				top: 15px;
+				right: 20px;
+			}
 		}
 	}
 	&.c-icon-arrow::after {
@@ -180,7 +202,10 @@
 		border: 1px solid v.$color-accent;
 		background-color: v.$color-white;
 		color: v.$color-accent;
-
+		justify-content: center;
+		padding: 0;
+		line-height: 1.2;
+		font-size: 1.8rem;
 		&:hover {
 			opacity: 0.8;
 			&::after {
@@ -239,7 +264,7 @@
 		// max-width: 280px;
 		max-width: 300px;
 		width: 100%;
-		font-size: 1.8rem;
+		font-size: 1.4rem;
 		padding: 0 20px;
 	}
 
