--- a/scss/project/privacy/privacy.scss
+++ b/scss/project/privacy/privacy.scss
@@ -3,11 +3,13 @@
 @use '../../foundation/mixins' as mixins;
 
 .p-privacy {
+    position: relative;
+    padding-top: auto;
     &__floatMemu{
         &__inner{
             display: flex;
             flex-flow: row wrap;
-            gap: 20px;
+            gap: 10px;
             margin: 0 auto;
             align-items: center;
             justify-content: center;
@@ -15,13 +17,14 @@
             top: 0;
             @media screen and (min-width: 768px) {
                 max-width: 620px;
+                gap: 20px;
             }
             @media screen and (min-width: 1024px) {
                 max-width: 940px;
             }
         }
         &__list{
-            width: 300px;
+            width: calc((100% - 10px) / 2);
             @media screen and (min-width: 768px) {
                 width: calc((100% - 20px) / 2);
             }
@@ -36,11 +39,12 @@
             position: fixed;
             top: 140px;
             padding: 30px 0;
-            width: 100%;
+            width: calc(100% - 40px);
             background-color: v.$color-white;
             z-index: 2;
             @media screen and (min-width: 768px) {
                 padding: 60px 0;
+                width: calc(100% - 60px);
             }
         }
     }
@@ -68,12 +72,203 @@
         &__text{
             color: v.$color-primary;
             font-size: 1.4rem;
-            line-height: 1.6;
+            line-height: 1.8;
+            margin-bottom: 60px;
             @media screen and (min-width: 768px) {
                 font-size: 1.6rem;
             }
             @media screen and (min-width: 1024px) {
                 font-size: 1.8rem;
+            }
+        }
+        &__ul{
+            padding-left: 24px;
+            display: flex;
+            flex-flow: column;
+            gap: 20px;
+            margin-bottom: 60px;
+            @media screen and (min-width: 768px) {
+                padding-left: 24px;
+            }
+            @media screen and (min-width: 1024px) {
+                padding-left: 30px;
+            }
+        }
+        &__list{
+            list-style: decimal;
+            color: v.$color-accent;
+            font-size: 1.8rem;
+            &__title{
+                color: v.$color-accent;
+                font-size: 1.8rem;
+                margin-bottom: 10px;
+                line-height: 1.4;
+                @media screen and (min-width: 768px) {
+                    font-size: 2rem;
+                    margin-bottom: 10px;
+                }
+                @media screen and (min-width: 1024px) {
+                    font-size: 2.4rem;
+                }
+            }
+            &__text{
+                color: v.$color-primary;
+                font-size: 1.4rem;
+                line-height: 1.8;
+                margin-bottom: 30px;
+                @media screen and (min-width: 768px) {
+                    font-size: 1.6rem;
+                }
+                @media screen and (min-width: 1024px) {
+                    font-size: 1.8rem;
+                }
+            }
+            ol{
+                margin-bottom: 30px;
+                color: v.$color-primary;
+                padding-left: 20px;
+                line-height: 1.8;
+                li{
+                    margin-bottom: 10px;
+                    font-size: 1.4rem;
+                    list-style: none;
+                    position: relative;
+                    &::before{
+                        position: absolute;
+                        right: calc(100% + 0.5rem);  /* 0.5remは連番とテキストとの余白 */
+                        content: "(" counter(list-item) ")";
+                    }
+                    @media screen and (min-width: 768px) {
+                        font-size: 1.6rem;
+                    }
+                    @media screen and (min-width: 1024px) {
+                        font-size: 1.8rem;
+                    }
+                }
+            }
+            @media screen and (min-width: 768px) {
+                font-size: 2rem;
+            }
+            @media screen and (min-width: 1024px) {
+                font-size: 2.4rem;
+            }
+        }
+    }
+    &__contact{
+        margin-bottom: 30px;
+        &__title{
+            font-weight: bold;
+            font-size: 1.6rem;
+            position: relative;
+            margin-bottom: 10px;
+            margin-left: -8px;
+            &::before{
+                font-size: 1.6rem;
+                content:"【";
+                position: relative;
+            }
+            &::after{
+                font-size: 1.6rem;
+                content:"】";
+                position: relative;
+            }
+            @media screen and (min-width: 768px) {
+                font-size: 2rem;
+                &::before{
+                    font-size: 2rem;
+                }
+                &::after{
+                    font-size: 2rem;
+                }
+            }
+            @media screen and (min-width: 1024px) {
+                font-size: 2.4rem;
+                &::before{
+                    font-size: 2.4rem;
+                }
+                &::after{
+                    font-size: 2.4rem;
+                }
+            }
+        }
+        &__text{
+            font-size: 1.4rem;
+            line-height: 1.6;
+            margin-bottom: 20px;
+            @media screen and (min-width: 768px) {
+                font-size: 1.6rem;
+            }
+            @media screen and (min-width: 1024px) {
+                font-size: 1.8rem;
+            }
+        }
+        &__section{
+            font-size: 1.6rem;
+            margin-bottom: 10px;
+            font-weight: bold;
+            @media screen and (min-width: 768px) {
+                font-size: 1.6rem;
+            }
+            @media screen and (min-width: 1024px) {
+                font-size: 1.8rem;
+            }
+        }
+        &__tel{
+            font-size: 1.8rem;
+            margin-bottom: 10px;
+            font-weight: bold;
+            @media screen and (min-width: 768px) {
+                font-size: 2rem;
+            }
+            @media screen and (min-width: 1024px) {
+                font-size: 2.4rem;
+            }
+        }
+        &__time{
+            font-size: 1.4rem;
+            @media screen and (min-width: 768px) {
+                font-size: 1.6rem;
+            }
+            @media screen and (min-width: 1024px) {
+                font-size: 1.6rem;
+            }
+        }
+    }
+    &__footer{
+        text-align: right;
+        &__date{
+            font-size: 1.4rem;
+            line-height: 1.6;
+            margin-bottom: 20px;
+            display: flex;
+            flex-flow: column;
+            justify-content: flex-end;
+            @media screen and (min-width: 768px) {
+                font-size: 1.6rem;
+            }
+            @media screen and (min-width: 1024px) {
+                font-size: 1.8rem;
+            }
+        }
+        &__signature{
+            h4{
+                font-size: 1.8rem;
+                font-weight: bold;
+                @media screen and (min-width: 768px) {
+                    font-size: 2rem;
+                }
+                @media screen and (min-width: 1024px) {
+                    font-size: 2.4rem;
+                }
+            }
+            h5{
+                font-size: 1.6rem;
+                @media screen and (min-width: 768px) {
+                    font-size: 1.8rem;
+                }
+                @media screen and (min-width: 1024px) {
+                    font-size: 1.8rem;
+                }
             }
         }
     }
