--- a/scss/project/privacy/privacy.scss
+++ b/scss/project/privacy/privacy.scss
@@ -93,11 +93,23 @@
             @media screen and (min-width: 1024px) {
                 padding-left: 30px;
             }
+            &__noNumber{
+                padding-left: 0;
+                @media screen and (min-width: 768px) {
+                    padding-left: 0;
+                }
+                @media screen and (min-width: 1024px) {
+                    padding-left: 0;
+                }
+            }
         }
         &__list{
             list-style: decimal;
             color: v.$color-accent;
             font-size: 1.8rem;
+            &__noNumber{
+                list-style: none;
+            }
             &__title{
                 color: v.$color-accent;
                 font-size: 1.8rem;
@@ -162,6 +174,7 @@
             position: relative;
             margin-bottom: 10px;
             margin-left: -8px;
+            color: v.$main-color-DeepBlue;
             &::before{
                 font-size: 1.6rem;
                 content:"【";
@@ -174,6 +187,7 @@
             }
             @media screen and (min-width: 768px) {
                 font-size: 2rem;
+                margin-left: -12px;
                 &::before{
                     font-size: 2rem;
                 }
@@ -254,11 +268,12 @@
             h4{
                 font-size: 1.8rem;
                 font-weight: bold;
+                margin-bottom: 10px;
                 @media screen and (min-width: 768px) {
                     font-size: 2rem;
                 }
                 @media screen and (min-width: 1024px) {
-                    font-size: 2.4rem;
+                    font-size: 2rem;
                 }
             }
             h5{
