--- a/scss/project/privacy/privacy.scss
+++ b/scss/project/privacy/privacy.scss
@@ -38,13 +38,16 @@
         &.fixed{
             position: fixed;
             top: 140px;
-            padding: 30px 0;
-            width: calc(100% - 40px);
+            padding: 30px 15px;
+            width: 100%;
+            left: 0;
             background-color: v.$color-white;
             z-index: 2;
             @media screen and (min-width: 768px) {
-                padding: 60px 0;
-                width: calc(100% - 60px);
+                padding: 30px 0;
+            }
+            @media screen and (min-width: 1024px) {
+                padding: 40px 0;
             }
         }
     }
@@ -52,16 +55,28 @@
         padding: 60px 0 60px;
         margin: 0 auto;
         @media screen and (min-width: 768px) {
-            padding: 60px 0 60px;
+            padding: 60px 0 80px;
         }
         @media screen and (min-width: 1024px) {
-            padding: 80px 0 80px;
+            padding: 80px 0 120px;
             max-width: 1280px;
         }
         &__title{
             color: v.$color-accent;
             font-size: 1.8rem;
             margin-bottom: 30px;
+            position: relative;
+            line-height: 1.4;
+            &::before{
+                content: "";
+                width: 100px;
+                height: 2px;
+                background-color: v.$color-accent;
+                display: block;
+                position: absolute;
+                left: 0;
+                bottom: -15px;
+            }
             @media screen and (min-width: 768px) {
                 font-size: 2.4rem;
             }
@@ -86,7 +101,6 @@
             display: flex;
             flex-flow: column;
             gap: 20px;
-            margin-bottom: 60px;
             @media screen and (min-width: 768px) {
                 padding-left: 24px;
             }
@@ -138,7 +152,7 @@
             ol{
                 margin-bottom: 30px;
                 color: v.$color-primary;
-                padding-left: 20px;
+                padding-left: 24px;
                 line-height: 1.8;
                 li{
                     margin-bottom: 10px;
@@ -147,8 +161,13 @@
                     position: relative;
                     &::before{
                         position: absolute;
-                        right: calc(100% + 0.5rem);  /* 0.5remは連番とテキストとの余白 */
-                        content: "(" counter(list-item) ")";
+                        right: 100%;  /* 0.5remは連番とテキストとの余白 */
+                        content: "（" counter(list-item) "）";
+                    }
+                    &.list__bold{
+                        &::before{
+                            font-weight: bold;
+                        }
                     }
                     @media screen and (min-width: 768px) {
                         font-size: 1.6rem;
@@ -156,6 +175,77 @@
                     @media screen and (min-width: 1024px) {
                         font-size: 1.8rem;
                     }
+                    h4{
+                        font-size: 1.4rem;
+                        font-weight: bold;
+                        @media screen and (min-width: 768px) {
+                           font-size: 1.6rem;
+                        }
+                        @media screen and (min-width: 1024px) {
+                            font-size: 1.8rem;
+                        }
+                    }
+                    h5{
+                        font-size: 1.4rem;
+                        margin-bottom: 8px;
+                        @media screen and (min-width: 768px) {
+                           font-size: 1.6rem;
+                        }
+                        @media screen and (min-width: 1024px) {
+                            font-size: 1.8rem;
+                        }
+                    }
+                }
+                &.nomalNumber{
+                    padding-left: 30px;
+                    li{
+                    list-style: decimal;
+                        &::before{
+                            content: none;
+                        }
+                    }
+                    @media screen and (min-width: 768px) {
+                        padding-left: 40px;
+                    }
+                    @media screen and (min-width: 1024px) {
+                        padding-left: 50px;
+                    }
+                    &__child{
+                        list-style: decimal;
+                        padding-left: 18px;
+                        li{
+                            list-style: decimal;
+                            &::before{
+                                content: none;
+                            }
+                            p{
+                                color: v.$color-primary;
+                                font-weight: normal;
+                                line-height: 1.6;
+                                font-size: 1.3rem;
+                                margin-bottom: 20px;
+                                @media screen and (min-width: 768px) {
+                                    font-size: 1.4rem;
+                                }
+                                @media screen and (min-width: 1024px) {
+                                    font-size: 1.6rem;
+                                }
+                            }
+                        }
+                        @media screen and (min-width: 768px) {
+                            padding-left: 24px;
+                        }
+                        @media screen and (min-width: 1024px) {
+                            padding-left: 24px;
+                        }
+                    }
+                }
+                @media screen and (min-width: 768px) {
+                    font-size: 2rem;
+                }
+                @media screen and (min-width: 1024px) {
+                    font-size: 2.4rem;
+                    padding-left: 36px;
                 }
             }
             @media screen and (min-width: 768px) {
@@ -165,16 +255,57 @@
                 font-size: 2.4rem;
             }
         }
+        &__privacyArea{
+            display: flex;
+            flex-flow: column;
+            gap: 30px;
+            align-items: center;
+            a
+            &__text{
+                font-size: 1.4rem;
+                text-align: left;
+                @media screen and (min-width: 768px) {
+                    font-size: 1.6rem;
+                }
+                @media screen and (min-width: 1024px) {
+                    font-size: 1.8rem;
+                }
+            }
+            &__image{
+                width: 120px;
+                @media screen and (min-width: 768px) {
+                    width: 140px;
+                }
+                a{
+                    width: 120px;
+                    display: block;
+                    @media screen and (min-width: 768px) {
+                        width: 140px;
+                    }
+                    img{
+
+                    }
+                }
+            }
+            @media screen and (min-width: 768px) {
+               flex-flow: row nowrap; 
+               align-items: flex-start;
+            }
+        }
     }
     &__contact{
-        margin-bottom: 30px;
+        margin-bottom: 60px;
+        &:nth-of-type(2){
+            margin-bottom: 0px;
+        }
         &__title{
             font-weight: bold;
             font-size: 1.6rem;
             position: relative;
-            margin-bottom: 10px;
+            margin-bottom: 15px;
             margin-left: -8px;
             color: v.$main-color-DeepBlue;
+            letter-spacing: 8px;
             &::before{
                 font-size: 1.6rem;
                 content:"【";
@@ -209,6 +340,7 @@
             font-size: 1.4rem;
             line-height: 1.6;
             margin-bottom: 20px;
+            color: v.$color-primary;
             @media screen and (min-width: 768px) {
                 font-size: 1.6rem;
             }
@@ -220,6 +352,7 @@
             font-size: 1.6rem;
             margin-bottom: 10px;
             font-weight: bold;
+            color: v.$color-primary;
             @media screen and (min-width: 768px) {
                 font-size: 1.6rem;
             }
@@ -231,6 +364,8 @@
             font-size: 1.8rem;
             margin-bottom: 10px;
             font-weight: bold;
+            color: v.$color-primary;
+            line-height: 1.4;
             @media screen and (min-width: 768px) {
                 font-size: 2rem;
             }
@@ -240,11 +375,27 @@
         }
         &__time{
             font-size: 1.4rem;
+            color: v.$color-primary;
             @media screen and (min-width: 768px) {
                 font-size: 1.6rem;
             }
             @media screen and (min-width: 1024px) {
                 font-size: 1.6rem;
+            }
+        }
+        &__mail{
+            font-size: 1.4rem;
+            color: v.$main-color-DeepBlue;
+            font-weight: bold;
+            a{
+                color: v.$main-color-DeepBlue;
+                text-decoration: underline;
+            }
+            @media screen and (min-width: 768px) {
+                font-size: 1.6rem;
+            }
+            @media screen and (min-width: 1024px) {
+                font-size: 1.8rem;
             }
         }
     }
