--- a/scss/foundation/_variables.scss
+++ b/scss/foundation/_variables.scss
@@ -30,6 +30,7 @@ $main-color-DeepBlue: #00478b;
 $main-color-GrayBlue: #81aac2;
 $color-darkBlueAccent: #00478b;
 $color-darkAccent: #00478b;
+$main-color-Blue-TL :#008bd5f2;
 
 // 赤系統
 $main-color-Red: #eb1c24;
