--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -19,7 +19,7 @@
 		align-items: center;
 		height: 110px;
 		padding: 0 30px;
-		transition: top .1s;
+		transition: top .5s , border-radius 1s;
 		margin: 0;
     	width: calc(100% - 60px);
 		border-radius: 20px;
@@ -27,7 +27,7 @@
 		transform: translateX(-50%);
 		top: 30px;
 		&.top{
-			transition: top .1s;
+			transition: top .5s , border-radius 1s;
 			top: 0;
 			border-radius: 0 0 20px 20px;
 		}
@@ -200,7 +200,19 @@
 					@media screen and (min-width: 1024px) {
 						position: revert;
 						border-bottom: none;
-						&:hover .l-submenu { visibility: visible; opacity: 1; transform: translateY(0); }
+						&:hover .l-submenu { 
+							visibility: visible; 
+							opacity: 1; 
+							transform: translateY(0); 
+						}
+						&:hover{
+							.l-navList__item-title-area{
+								.l-navList__item-title{
+									color:v.$main-color-Blue;
+									transition: color .3s ease-in-out;
+								}
+							}
+							}
 						&.disp-hamburger { display: none; }
 					}
 
@@ -265,10 +277,6 @@
 							font-size: 1.4rem;
 							transition: color .5s ease-in-out;
 							padding-bottom: 20px;
-							&:hover{
-								color:v.$main-color-Blue;
-								transition: color .3s ease-in-out;
-							}
 						}
 						@media screen and (min-width: 1280px) {
 							font-size: 1.8rem;
@@ -398,28 +406,17 @@
 							visibility: hidden;
 							opacity: 0;
 							transform: translateY(0px); // ← 上からふわっと降りる
-							transition: opacity 0.3s ease, transform 0.3s ease;
+							transition: opacity 0.5s ease, transform 0.5s ease ,visibility 0.5s ease;
 							background-color: v.$main-color-Blue-TL;
 							width: 100%;
     						flex-flow: row;
 							padding: 30px;
 							font-size: 1.4rem;
 							border-radius: 20px;
-							//box-shadow: 0 0 10px rgba(0,0,0,.4);
+							box-shadow: 0 10px 10px rgba(0,0,0,.4);
 							overflow: hidden;
 							gap: 10px;
 							display: flex !important;
-							box-shadow: 0 0 10px rgba(0,0,0,.4);
-							&::before{
-								content:"";
-								display: block;
-								width: 100%;
-								height: 100px;
-								background-color: v.$color-white;
-								position: absolute;
-								top: 0;
-								transform: translateY(-100%);
-							}
 							&__colum{
 								flex-flow: column;
 								gap: 30px;
