--- a/scss/component/_form.scss
+++ b/scss/component/_form.scss
@@ -344,6 +344,7 @@ input[type=email]::placeholder {
 	}
 	&__precautions{
 		font-size: 1.2rem;
+		margin-top: 20px;
 		@media screen and (min-width: 1024px) {
 			font-size: 1.4rem;
 		}
