--- a/scss/component/_form.scss
+++ b/scss/component/_form.scss
@@ -62,6 +62,9 @@ input[type=email]::placeholder {
 	margin-bottom: 10px;
 	display: inline-block;
 	font-size: 1.6rem;
+	@media screen and (min-width: 1024px) {
+		font-size: 1.8rem;
+	}
 }
 .mw_wp_form .horizontal-item + .horizontal-item{
 	margin-left: 0!important;
@@ -187,7 +190,7 @@ input[type=email]::placeholder {
 			padding: 35px 15px;
 			display: grid;
 			grid-template-columns: 26% 1fr;
-			align-items: center;
+			align-items: flex-start;
 			&--address {
 				align-items: start;
 			}
@@ -347,6 +350,17 @@ input[type=email]::placeholder {
 		margin-top: 20px;
 		@media screen and (min-width: 1024px) {
 			font-size: 1.4rem;
+		}
+	}
+	&__text {
+		width: 100%;
+		font-size: 1.6rem;
+		margin-bottom: 5px;
+		&:nth-of-type(2){
+			margin-top: 20px;
+		}
+		@media screen and (min-width: 1024px) {
+			font-size: 1.8rem;
 		}
 	}
 }
