--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -20,13 +20,13 @@
 			flex-direction: row;
 			gap: 20px;
 			justify-content: space-between;
-			max-width: 800px;
+			max-width: 100%;
 			margin: 0 auto;
 			padding: 60px 30px 80px;
 			box-sizing: content-box;
 		}
 		@media screen and (min-width: 1280px) {
-			max-width: 1100px;
+			max-width: 1280px;
 			padding: 60px 20px 80px;
 		}
 	}
